homecluster/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-https-redirect
  namespace: homepage
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-http
  namespace: homepage
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`home.local.tylermarques.com`)
      middlewares:
        - name: homepage-https-redirect
      services:
        - name: homepage
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`home.local.tylermarques.com`)
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: homepage-local-tls
